packages/typ/tests/fixtures/diagnostics/0129_adt_record_pattern_annotation_mismatch_01.ml
type rec_alpha = { left : int; right : bool }
let { left = (alpha : bool); right = other_alpha } =
  { left = 0; right = true }
